// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`author doesn't exist in source.author 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
    "3": Object {
      "author": 1,
      "id": 3,
      "link": "/post-3/attachment-3/",
      "slug": "attachment-3",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isArchive": true,
      "isAuthor": true,
      "isFetching": false,
      "isReady": true,
      "items": Array [
        Object {
          "id": 1,
          "link": "/post-1/",
          "type": "post",
        },
        Object {
          "id": 2,
          "link": "/post-2/",
          "type": "post",
        },
        Object {
          "id": 3,
          "link": "/post-3/",
          "type": "post",
        },
      ],
      "link": "/author/author-1/",
      "page": 1,
      "path": "/author/author-1/",
      "prev": "/author/author-1/",
      "query": Object {},
      "total": 5,
      "totalPages": 2,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-3/attachment-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 2,
      "id": 2,
      "link": "/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
    "3": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          3,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 3,
      "id": 3,
      "link": "/post-3/",
      "slug": "post-3",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`author doesn't return 404 if the first page is empty (no headers) 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isArchive": true,
      "isAuthor": true,
      "isFetching": false,
      "isReady": true,
      "items": Array [],
      "link": "/author/author-1/",
      "page": 1,
      "path": "/author/author-1/",
      "query": Object {},
      "total": 0,
      "totalPages": 0,
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`author doesn't return 404 if the first page is empty 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isArchive": true,
      "isAuthor": true,
      "isFetching": false,
      "isReady": true,
      "items": Array [],
      "link": "/author/author-1/",
      "page": 1,
      "path": "/author/author-1/",
      "query": Object {},
      "total": 0,
      "totalPages": 0,
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`author fetchs from a different endpoint with extra params 1`] = `
Array [
  Array [
    Object {
      "endpoint": "users",
      "params": Object {
        "slug": "author-1",
      },
    },
  ],
  Array [
    Object {
      "endpoint": "multiple-post-type",
      "params": Object {
        "_embed": true,
        "author": 1,
        "page": 1,
        "search": undefined,
        "type": Array [
          "post",
          "cpt",
        ],
      },
    },
  ],
]
`;

exports[`author fetchs from a different endpoint with extra params 2`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "12": Object {
      "author": 1,
      "id": 12,
      "link": "/cpt/cpt-11/attachment-cpt-11/",
      "slug": "attachment-cpt-11",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "cpt": Object {
    "11": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          12,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 12,
      "id": 11,
      "link": "/cpt/cpt-11/",
      "slug": "cpt-11",
      "tags": Array [],
      "type": "cpt",
    },
  },
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isArchive": true,
      "isAuthor": true,
      "isFetching": false,
      "isReady": true,
      "items": Array [
        Object {
          "id": 1,
          "link": "/post-1/",
          "type": "post",
        },
        Object {
          "id": 11,
          "link": "/cpt/cpt-11/",
          "type": "cpt",
        },
        Object {
          "id": 2,
          "link": "/post-2/",
          "type": "post",
        },
      ],
      "link": "/author/author-1/",
      "page": 1,
      "path": "/author/author-1/",
      "prev": "/author/author-1/",
      "query": Object {},
      "total": 5,
      "totalPages": 2,
    },
    "/cpt/cpt-11/": Object {
      "id": 11,
      "isFetching": false,
      "isReady": false,
      "type": "cpt",
    },
    "/cpt/cpt-11/attachment-cpt-11/": Object {
      "id": 12,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {
    "type": Array [
      "post",
      "cpt",
    ],
  },
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 2,
      "id": 2,
      "link": "/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "multiple-post-type",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`author is requested with a search param 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
    "3": Object {
      "author": 1,
      "id": 3,
      "link": "/post-3/attachment-3/",
      "slug": "attachment-3",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/author/author-1/?s=findAuthor": Object {
      "id": 1,
      "isArchive": true,
      "isAuthor": true,
      "isFetching": false,
      "isReady": true,
      "isSearch": true,
      "items": Array [
        Object {
          "id": 1,
          "link": "/post-1/",
          "type": "post",
        },
        Object {
          "id": 2,
          "link": "/post-2/",
          "type": "post",
        },
        Object {
          "id": 3,
          "link": "/post-3/",
          "type": "post",
        },
      ],
      "link": "/author/author-1/?s=findAuthor",
      "page": 1,
      "path": "/author/author-1/",
      "prev": "/author/author-1/?s=findAuthor",
      "query": Object {
        "s": "findAuthor",
      },
      "searchQuery": "findAuthor",
      "total": 5,
      "totalPages": 2,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-3/attachment-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 2,
      "id": 2,
      "link": "/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
    "3": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          3,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 3,
      "id": 3,
      "link": "/post-3/",
      "slug": "post-3",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`author is requested with any query param 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
    "3": Object {
      "author": 1,
      "id": 3,
      "link": "/post-3/attachment-3/",
      "slug": "attachment-3",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/author/author-1/?some=param": Object {
      "id": 1,
      "isArchive": true,
      "isAuthor": true,
      "isFetching": false,
      "isReady": true,
      "items": Array [
        Object {
          "id": 1,
          "link": "/post-1/",
          "type": "post",
        },
        Object {
          "id": 2,
          "link": "/post-2/",
          "type": "post",
        },
        Object {
          "id": 3,
          "link": "/post-3/",
          "type": "post",
        },
      ],
      "link": "/author/author-1/?some=param",
      "page": 1,
      "path": "/author/author-1/",
      "prev": "/author/author-1/?some=param",
      "query": Object {
        "some": "param",
      },
      "total": 5,
      "totalPages": 2,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-3/attachment-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 2,
      "id": 2,
      "link": "/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
    "3": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          3,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 3,
      "id": 3,
      "link": "/post-3/",
      "slug": "post-3",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`author returns 404 if author doesn't exist in WP 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {},
  "author": Object {},
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/non-existent/": Object {
      "errorStatus": 404,
      "errorStatusText": "entity from endpoint \\"users\\" with slug \\"non-existent\\" not found",
      "is404": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`author returns 404 if the page fetched is out of range 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/author/author-1/page/3/": Object {
      "errorStatus": 404,
      "errorStatusText": "author \\"author-1\\" doesn't have page 3",
      "is404": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`author was populated but not accessed 1`] = `
Object {
  "api": "https://test.frontity.io/wp-json",
  "attachment": Object {
    "4": Object {
      "author": 1,
      "id": 4,
      "link": "/post-4/attachment-4/",
      "slug": "attachment-4",
      "type": "attachment",
    },
    "5": Object {
      "author": 1,
      "id": 5,
      "link": "/post-5/attachment-5/",
      "slug": "attachment-5",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/author/author-1/page/2/": Object {
      "id": 1,
      "isArchive": true,
      "isAuthor": true,
      "isFetching": false,
      "isReady": true,
      "items": Array [
        Object {
          "id": 4,
          "link": "/post-4/",
          "type": "post",
        },
        Object {
          "id": 5,
          "link": "/post-5/",
          "type": "post",
        },
      ],
      "link": "/author/author-1/page/2/",
      "next": "/author/author-1/page/3/",
      "page": 2,
      "path": "/author/author-1/",
      "query": Object {},
      "total": 5,
      "totalPages": 2,
    },
    "/post-4/": Object {
      "id": 4,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-4/attachment-4/": Object {
      "id": 4,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-5/": Object {
      "id": 5,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-5/attachment-5/": Object {
      "id": 5,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
  },
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "4": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          4,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 4,
      "id": 4,
      "link": "/post-4/",
      "slug": "post-4",
      "tags": Array [],
      "type": "post",
    },
    "5": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          5,
        ],
      },
      "author": 1,
      "categories": Array [],
      "featured_media": 5,
      "id": 5,
      "link": "/post-5/",
      "slug": "post-5",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;
